--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <div class="box">
         <img src="./favicons/favicon-96x96.png">
         <h3>Engineering<h3>
-        <p>“Iffff you want to find the secrets of the universe, think in terms of energy, frequency and vibration.” — Nikola Tesla</p>
+        <p>“If you want to find the secrets of the universe, think in terms of energy, frequency and vibration.” — Nikola Tesla</p>
       </div>
     </div>
     </section>
