--- a/gallery.html
+++ b/gallery.html
@@ -77,6 +77,33 @@
 	<h4 style= "text-align:center;">Random pictures in no specific order</h4>
 
 
+	<div class="responsive">
+		<div class="gallery">
+			<a target="_blank" href="./images/CarSelfie.JPG">
+				<img src="./images/CarSelfie.JPG" alt="Car Selfie" width="600" height="400">
+			</a>
+			<div class="desc">Car Selfie</div>
+		</div>
+	</div>
+
+	<div class="responsive">
+		<div class="gallery">
+			<a target="_blank" href="./images/CarSelfie2.JPG">
+				<img src="./images/CarSelfie2.JPG" alt="Car Selfie" width="600" height="400">
+			</a>
+			<div class="desc">Car Selfie</div>
+		</div>
+	</div>
+
+	<div class="responsive">
+		<div class="gallery">
+			<a target="_blank" href="./images/CarSelfie3.JPG">
+				<img src="./images/CarSelfie3.JPG" alt="Car Selfie" width="600" height="400">
+			</a>
+			<div class="desc">Car Selfie</div>
+		</div>
+	</div>
+
 
 	<div class="responsive">
 	  <div class="gallery">
