--- a/gallery.html
+++ b/gallery.html
@@ -104,6 +104,15 @@
 		</div>
 	</div>
 
+	<div class="responsive">
+		<div class="gallery">
+			<a target="_blank" href="./images/CarSelfie4.JPG">
+				<img src="./images/CarSelfie4.JPG" alt="Car Selfie" width="600" height="400">
+			</a>
+			<div class="desc">Car Selfie</div>
+		</div>
+	</div>
+
 
 	<div class="responsive">
 	  <div class="gallery">
