--- a/about.html
+++ b/about.html
@@ -75,31 +75,31 @@
 
 		<div class="mySlides fade">
 		<!--  <div class="numbertext">1 / 3</div> -->
-		  <img src="./images/Travel/mod2.JPG" style="width:100%">
+		  <img src="./images/Travel/mod2.jpg" style="width:100%">
 		 <!-- <div class="text">Caption Text</div> -->
 		</div>
 
 		<div class="mySlides fade">
 		<!--  <div class="numbertext">2 / 3</div> -->
-		  <img src="./images/Travel/mod6.JPG" style="width:100%">
+		  <img src="./images/Travel/mod6.jpg" style="width:100%">
 		  <!--<div class="text">Caption Two</div> -->
 		</div>
 
 		<div class="mySlides fade">
 		<!--  <div class="numbertext">3 / 3</div> -->
-		  <img src="./images/Travel/mod3.JPG" style="width:100%">
+		  <img src="./images/Travel/mod3.jpg" style="width:100%">
 		 <!-- <div class="text">Caption Three</div> -->
 		</div>
 
 		<div class="mySlides fade">
 		<!--  <div class="numbertext">3 / 3</div> -->
-		  <img src="./images/Travel/Custer1.JPG" style="width:100%">
+		  <img src="./images/Travel/Custer1.jpg" style="width:100%">
 		  <!--<div class="text">Caption Three</div> -->
 		</div>
 
 		<div class="mySlides fade">
 		<!--  <div class="numbertext">3 / 3</div> -->
-			<img src="./images/Travel/LAbalc2.JPG" style="width:100%">
+			<img src="./images/Travel/LAbalc2.jpg" style="width:100%">
 			<!--<div class="text">Caption Three</div> -->
 		</div>
 
