--- a/gallery.html
+++ b/gallery.html
@@ -193,17 +193,17 @@
 	</div>
 </div>
 
-
-
-
-	<div class="responsive">
-		<div class="gallery">
-			<a target="_blank" href="./images/Travel/EiffelTwrSelfie.JPG">
-				<img src="./images/Travel/EiffelTwrSelfie.JPG" alt="Pablo and Cameron in Las Vegas" width="600" height="400">
-			</a>
-			<div class="desc">Landed in Las Vegas</div>
-		</div>
+<div class="responsive">
+	<div class="gallery">
+		<a target="_blank" href="./images/Travel/PabloinWCoast.JPG">
+			<img src="./images/Travel/PabloinWCoast.JPG" alt="Pablo Walking on the West Coast" width="600"  height="400">
+		</a>
+		<div class="desc">On the West Coast</div>
 	</div>
+</div>
+
+
+
 
 
   <!--
