--- a/radio.html
+++ b/radio.html
@@ -94,13 +94,13 @@
 
 <div class="mySlides fade">
 <!--  <div class="numbertext">3 / 3</div> -->
-  <img src="./images/Radio/RadTrunk2.JPG" style="width:100%">
+  <img src="./images/Radio/RadTrunk2.jpg" style="width:100%">
   <div class="text">Caption Three</div>
 </div>
 
 <div class="mySlides fade">
 <!--  <div class="numbertext">3 / 3</div> -->
-  <img src="./images/Radio/RadCarTow1.JPG" style="width:100%">
+  <img src="./images/Radio/RadCarTow1.jpg" style="width:100%">
   <div class="text">Caption Three</div>
 </div>
 
@@ -174,7 +174,7 @@ function showSlides() {
 				equations for the desing and build of my team's aircraft.</p>
 					<!--  <p>Pricing: $150 - $200</p> -->
 
-					
+
 
 
 					<div class="row">
