--- a/fitness.html
+++ b/fitness.html
@@ -75,25 +75,25 @@
 
 		<div class="mySlides fade">
 		<!--  <div class="numbertext">1 / 3</div> -->
-		  <img src="./images/Fitness/SelfWrkout7.JPG" style="width:100%">
+		  <img src="./images/Fitness/SelfWrkout7.jpg" style="width:100%">
 		 <!-- <div class="text">Caption Text</div> -->
 		</div>
 
 		<div class="mySlides fade">
 		<!--  <div class="numbertext">3 / 3</div> -->
-		  <img src="./images/Fitness/WrkoutMv.JPG" style="width:100%">
+		  <img src="./images/Fitness/WrkoutMv.jpg" style="width:100%">
 		 <!-- <div class="text">Caption Three</div> -->
 		</div>
 
 		<div class="mySlides fade">
 		<!--  <div class="numbertext">3 / 3</div> -->
-		  <img src="./images/Fitness/WrkoutMv1.JPG" style="width:100%">
+		  <img src="./images/Fitness/WrkoutMv1.jpg" style="width:100%">
 		  <!--<div class="text">Caption Three</div> -->
 		</div>
 
     <div class="mySlides fade">
     <!--  <div class="numbertext">2 / 3</div> -->
-      <img src="./images/Fitness/Wrkout2.JPG" style="width:100%">
+      <img src="./images/Fitness/Wrkout2.jpg" style="width:100%">
       <!--<div class="text">Caption Two</div> -->
     </div>
 
