--- a/about.html
+++ b/about.html
@@ -182,7 +182,7 @@
 
 
     <footer>
-      <p>Pablo Espíndola Chavarría, Copyright &copy; 2021 <br>
+      <p>Pabloidea, Copyright &copy; 2021 <br>
 			Website made by Pablo;)</p>
     </footer>
 	</body>
