--- a/engineering.html
+++ b/engineering.html
@@ -87,7 +87,7 @@
 
     		<div class="mySlides fade">
     		<!--  <div class="numbertext">2 / 3</div> -->
-    		  <img src="./images/Aero/pic3.JPG" style="width:100%">
+    		  <img src="./images/Aero/pic3.jpg" style="width:100%">
     		  <!--<div class="text">Caption Two</div> -->
     		</div>
 
