--- a/fitness.html
+++ b/fitness.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="Pablo Espíndola Chavarría">
 		<meta name="keywords" content="Pablo Espíndola,Pablo Espíndola Chavarría, Engineering, Pablo Espíndola Chavarría Engineering">
 		<meta name="author" content="Pablo Espíndola Chavarría">
-		<title>Pablo Engineering | About</title>
+		<title>Pabloidea | About</title>
 		<link rel="stylesheet" href="./css/style2.css"> <!-- NOT USING STYLE2 so that the dots don't appear on slideshow -->
 
 		<link rel="apple-touch-icon" sizes="180x180" href="./favicons/apple-touch-icon.png">
@@ -40,7 +40,7 @@
 
 					<div class="navbar">
 						<a href="index.html">Home</a>
-						<a style="color:#D4F7D4; font-weight:bold;" href="about.html">About</a>
+						<a href="about.html">About</a>
 						<div class="dropdown">
 							<button class="dropbtn">More
 								<i class="fa fa-caret-down"></i>
@@ -170,7 +170,7 @@
 
 
     <footer>
-      <p>Pablo Espíndola Chavarría, Copyright &copy; 2021 <br>
+      <p>Pabloidea, Copyright &copy; 2021 <br>
 			Website made by Pablo;)</p>
     </footer>
 	</body>
