--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="Pablo Espindola Chavarria">
 		<meta name="keywords" content="Pablo Espindola,Pablo Espindola Chavarria, Engineering, Pablo Espindola Chavarria Engineering">
 		<meta name="author" content="Pablo Espindola Chavarria">
-		<title>Pablo Engineering | Gallery</title>
+		<title>Pabloidea | Gallery</title>
 		<link rel="stylesheet" href="./css/style2.css">
 
 		<link rel="apple-touch-icon" sizes="180x180" href="./favicons/apple-touch-icon.png">
@@ -331,7 +331,7 @@ function showSlides() {
 
 
     <footer>
-      <p>Pablo Espíndola Chavarría, Copyright &copy; 2021 <br>
+      <p>Pabloidea, Copyright &copy; 2021 <br>
       Website made by Pablo;)</p>
     </footer>
 	</body>
