--- a/radio.html
+++ b/radio.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="Pablo Espíndola Chavarría">
 		<meta name="keywords" content="Pablo Espíndola,Pablo Espíndola Chavarría, Engineering, Pablo Espíndola Chavarría Engineering">
 		<meta name="author" content="Pablo Espíndola Chavarría">
-		<title>Pablo Engineering | Radio</title>
+		<title>Pabloidea | Radio</title>
 		<link rel="stylesheet" href="./css/style2.css">
 
 <!--This makes the favicon-->
@@ -197,7 +197,7 @@ function showSlides() {
 
 
 <footer>
-	<p>Pablo Espíndola Chavarría, Copyright &copy; 2021 <br>
+	<p>Pabloidea, Copyright &copy; 2021 <br>
 	Website made by Pablo;)</p>
 </footer>
 </body>
