--- a/engineering.html
+++ b/engineering.html
@@ -52,7 +52,7 @@
 								<i class="fa fa-caret-down"></i>
 							</button>
 							<div class="dropdown-content">
-								<a href="Radio.html">Radio</a>
+								<a href="radio.html">Radio</a>
 							<a style="color:#35424a; font-weight:bold;" href="engineering.html">Engineering</a>
 							<a href ="fitness.html">Fitness</a>
 								<a href="gallery.html">Gallery</a>
@@ -224,7 +224,7 @@
 
 
     <footer>
-      <p>Pablo Espíndola Chavarría, Copyright &copy; 2021 <br>
+      <p>Pablo Espíndola Chavarría, Copyright &copy; 2022 <br>
 			Website made by Pablo;)</p>
     </footer>
 	</body>
