--- a/engineering.html
+++ b/engineering.html
@@ -156,7 +156,7 @@
                 <!--  <p>Pricing: $150 - $200</p> -->
 
 								<center>
-									<img src="./images/Radio/Radself.jpg" alt="Selfie with Radio" style="width:400px;height:500px;">
+									<img src="./images/Radio/RadSelf.jpg" alt="Selfie with Radio" style="width:400px;height:500px;">
 								</center>
 
             </li>
