--- a/radio.html
+++ b/radio.html
@@ -76,7 +76,7 @@
 
 
 	<section>
-  <p style = "text-align:center; font-size: 20px; font-family: Cursive;">“If you want to find the secrets of the universe, think in terms of energy, frequency and vibration.” — Nikola Tesla</p>
+  <p style = "text-align:center; font-size: 40px; font-family: Cursive;">“If you want to find the secrets of the universe, think in terms of energy, frequency and vibration.” — Nikola Tesla</p>
 </section>
 <div class="slideshow-container">
 
@@ -153,7 +153,19 @@ function showSlides() {
 		<article id="main-col">
 			<h1 class="page-title">Engineering and Design Work</h1>
 			<ul id="services">
+				<br>
+				<li>
+					<h3>Basic aircraft Design Work</h3>
+					<p>In the Spring semester of 2021 I took an Intro to Aircraft Design class, where my team and I designed and built a basic aircraft.
+					This was an awesome experience because we took the knowledge from the previous course, Aerospace Vehicle Performance, and applied a lot of the
+				equations for the desing and build of my team's aircraft.</p>
+					<!--  <p>Pricing: $150 - $200</p> -->
 
+					<center>
+						<img src="./images/Radio/RadSelf.jpg" alt="Selfie with Radio" style="width:600px;height:500px;">
+					</center>
+
+				</li>
 				<br>
 				<li>
 					<h3>Amateur Radio Club [W0EEE]</h3>
@@ -162,13 +174,13 @@ function showSlides() {
 						<!--  <p>Pricing: $150 - $200</p> -->
 
 						<center>
-							<img src="./images/Radio/Radself.jpg" alt="Selfie with Radio" style="width:400px;height:500px;">
+							<img src="./images/Radio/RadSelf.jpg" alt="Selfie with Radio" style="width:400px;height:500px;">
 						</center>
 
 				</li>
 				<br>
 				<li>
-					<h3>Basic aircraft Design Work</h3>
+					<h3>Meeting Ward Silver</h3>
 					<p>In the Spring semester of 2021 I took an Intro to Aircraft Design class, where my team and I designed and built a basic aircraft.
 					This was an awesome experience because we took the knowledge from the previous course, Aerospace Vehicle Performance, and applied a lot of the
 				equations for the desing and build of my team's aircraft.</p>
@@ -179,13 +191,13 @@ function showSlides() {
 
 					<div class="row">
 						<div class="column">
-							<img src="./images/Engineering/lockerfront.JPG" alt="Cardboard safe front" style="width:100%">
+							<img src="./images/Radio/RadExtraBook.JPG" alt="Cardboard safe front" style="width:90%">
 						</div>
 						<div class="column">
-							<img src="./images/Engineering/lockermech.JPG" alt="Cardboard safe mechanism" style="width:100%">
+							<img src="./images/Radio/RadHam4Dum.JPG" alt="Cardboard safe mechanism" style="width:90%">
 						</div>
 						<div class="column">
-							<img src="./images/Engineering/lockerdial.JPG" alt="Cardboard safe dial" style="width:100%">
+							<img src="./images/Engineering/lockerdial.JPG" alt="Cardboard safe dial" style="width:90%">
 						</div>
 
 				</li>
