--- a/radio.html
+++ b/radio.html
@@ -76,7 +76,7 @@
 
 
 	<section>
-  <p style = "text-align:center; font-size: 40px; font-family: Cursive;">“If you want to find the secrets of the universe, think in terms of energy, frequency and vibration.” — Nikola Tesla</p>
+  <p style = "text-align:center; font-size: 40px; font-family: Cursive; font-weight:bold;">“If you want to find the secrets of the universe, think in terms of energy, frequency and vibration.” — Nikola Tesla</p>
 </section>
 <div class="slideshow-container">
 
