--- a/radio.html
+++ b/radio.html
@@ -76,7 +76,7 @@
 
 
 	<section>
-  <p style = "text-align:center; font-size: 40px; font-family: Cursive; font-weight:bold;">“If you want to find the secrets of the universe, think in terms of energy, frequency and vibration.” — Nikola Tesla</p>
+  <p style = "padding-left: 20px; padding-right: 20px; text-align:center; font-size: 40px; font-family: Cursive; font-weight:bold;">“If you want to find the secrets of the universe, think in terms of energy, frequency and vibration.” — Nikola Tesla</p>
 </section>
 <div class="slideshow-container">
 
@@ -191,13 +191,19 @@ function showSlides() {
 
 					<div class="row">
 						<div class="column">
-							<img src="./images/Radio/RadExtraBook.JPG" alt="Cardboard safe front" style="width:90%">
+							<img src="./images/Radio/RadExtraBook.JPG" alt="Cardboard safe front" style="width:70%">
 						</div>
 						<div class="column">
-							<img src="./images/Radio/RadHam4Dum.JPG" alt="Cardboard safe mechanism" style="width:90%">
+							<img src="./images/Radio/RadHam4Dum.JPG" alt="Cardboard safe mechanism" style="width:70%">
 						</div>
 						<div class="column">
-							<img src="./images/Engineering/lockerdial.JPG" alt="Cardboard safe dial" style="width:90%">
+							<img src="./images/Radio/RadWardTwr.JPG" alt="Cardboard safe dial" style="width:70%">
+						</div>
+						<div class="column">
+							<img src="./images/Radio/RadWard.JPG" alt="Cardboard safe dial" style="width:70%">
+						</div>
+						<div class="column">
+							<img src="./images/Radio/RadWardGND.JPG" alt="Cardboard safe dial" style="width:70%">
 						</div>
 
 				</li>
