--- a/radio.html
+++ b/radio.html
@@ -76,32 +76,32 @@
 
 
 	<section>
-  <p style = "padding-left: 20px; padding-right: 20px; text-align:center; font-size: 40px; font-family: Cursive; font-weight:bold;">“If you want to find the secrets of the universe, think in terms of energy, frequency and vibration.” — Nikola Tesla</p>
+  <p style = "padding-left: 20px; padding-right: 20px; text-align:center; font-size: 40px; font-family: Cursive; font-weight:bold;">“If you want to find the secrets of the universe, think in terms of energy, frequency and vibration.” <br> — Nikola Tesla</p>
 </section>
 <div class="slideshow-container">
 
 <div class="mySlides fade">
 <!--  <div class="numbertext">1 / 3</div> -->
   <img src="./images/Radio/radiocars2.jpg" style="width:100%">
-  <div class="text">Caption Text</div>
+<!--  <div class="text">Caption Text</div> -->
 </div>
 
 <div class="mySlides fade">
 <!--  <div class="numbertext">2 / 3</div> -->
   <img src="./images/Radio/RadTow.jpg" style="width:100%">
-  <div class="text">Caption Two</div>
+<!--  <div class="text">Caption Two</div> -->
 </div>
 
 <div class="mySlides fade">
 <!--  <div class="numbertext">3 / 3</div> -->
   <img src="./images/Radio/RadTrunk2.jpg" style="width:100%">
-  <div class="text">Caption Three</div>
+<!--  <div class="text">Caption Three</div> -->
 </div>
 
 <div class="mySlides fade">
 <!--  <div class="numbertext">3 / 3</div> -->
   <img src="./images/Radio/RadCarTow1.jpg" style="width:100%">
-  <div class="text">Caption Three</div>
+<!--  <div class="text">Caption Three</div> -->
 </div>
 
 
