--- a/gallery.html
+++ b/gallery.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-		<meta charset="utf-8">
-		<meta name="viewport" content "width=device-width">
-		<meta name="description" content="Pablo Espindola Chavarria">
-		<meta name="keywords" content="Pablo Espindola,Pablo Espindola Chavarria, Engineering, Pablo Espindola Chavarria Engineering">
-		<meta name="author" content="Pablo Espindola Chavarria">
+	<meta charset="utf-8">
+	<meta name="viewport" content "width=device-width">
+	<meta name="description" content="Pabloidea">
+	<meta name="keywords" content="Pabloidea, Engineering, Pabloidea Engineering">
+	<meta name="author" content="Pabloidea">
 		<title>Pabloidea | Gallery</title>
 		<link rel="stylesheet" href="./css/style2.css">
 
@@ -206,38 +206,6 @@
 
 
 
-  <!--
-  	<div class="responsive">
-  	  <div class="gallery">
-  	    <a target="_blank" href="./images/seriousselfie.JPG">
-  	      <img src="./images/seriousselfie.JPG" alt="Pablo Selfie" width="600" height="500">
-  	    </a>
-  	    <div class="desc">Conclusion Of First S&T Semester</div>
-  	  </div>
-  	</div>
-
-
-	<div class="responsive">
-	  <div class="gallery">
-	    <a target="_blank" href="./images/GucciTruck.JPG">
-	      <img src="./images/GucciTruck.JPG" alt="Gucci Truck" width="600" height="400">
-	    </a>
-	    <div class="desc">Gucci Truck</div>
-	  </div>
-	</div>
-
-
-	<div class="responsive">
-	  <div class="gallery">
-	    <a target="_blank" href="./images/EmersonRadioTower.dng">
-	      <img src="./images/EmersonRadioTower.dng" alt="Emerson Electric Amateur Radio Tower" width="600" height="400">
-	    </a>
-	    <div class="desc">S&T Amateur Radio Tower</div>
-	  </div>
-	</div>
-
-
--->
 
 
 <div class="slideshow-container">
@@ -303,7 +271,7 @@ function showSlides() {
   }
   slides[slideIndex-1].style.display = "block";
   dots[slideIndex-1].className += " active";
-  setTimeout(showSlides, 5500); // Change image every 2 seconds
+  setTimeout(showSlides, 5500); // Change image every 5 seconds
 }
 </script>
 
