--- a/hobbies.html
+++ b/hobbies.html
@@ -3,9 +3,9 @@
 <head>
 		<meta charset="utf-8">
 		<meta name="viewport" content "width=device-width">
-		<meta name="description" content="Pablo Espíndola Chavarría">
-		<meta name="keywords" content="Pablo Espíndola,Pablo Espíndola Chavarría, Engineering, Pablo Espíndola Chavarría Engineering">
-		<meta name="author" content="Pablo Espíndola Chavarría">
+		<meta name="description" content="Pabloidea">
+		<meta name="keywords" content="Pabloidea, Engineering, Pabloidea Engineering">
+		<meta name="author" content="Pabloidea">
 		<title>Pablo Engineering | Hobbies</title>
 		<link rel="stylesheet" href="./css/style.css">
 
@@ -145,7 +145,7 @@
             </div>
 						<aside>
           </aside>
-  
+
     </section>
 
     <footer>
