--- a/engineering.html
+++ b/engineering.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-		<meta charset="utf-8">
-		<meta name="viewport" content "width=device-width">
-		<meta name="description" content="Pablo Espíndola Chavarría">
-		<meta name="keywords" content="Pablo Espíndola,Pablo Espíndola Chavarría, Engineering, Pablo Espíndola Chavarría Engineering">
-		<meta name="author" content="Pablo Espíndola Chavarría">
+	<meta charset="utf-8">
+	<meta name="viewport" content "width=device-width">
+	<meta name="description" content="Pabloidea">
+	<meta name="keywords" content="Pabloidea, Engineering, Pabloidea Engineering">
+	<meta name="author" content="Pabloidea">
 		<title>Pablo Engineering | Engineering</title>
 		<link rel="stylesheet" href="./css/style2.css">
 
