--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-		<meta charset="utf-8">
-		<meta name="viewport" content "width=device-width">
-		<meta name="description" content="Pablo Espíndola Chavarría">
-		<meta name="keywords" content="Pablo Espíndola,Pablo Espíndola Chavarría, Engineering, Pablo Espíndola Chavarría Engineering">
-		<meta name="author" content="Pablo Espíndola Chavarría">
+	<meta charset="utf-8">
+	<meta name="viewport" content "width=device-width">
+	<meta name="description" content="Pabloidea">
+	<meta name="keywords" content="Pabloidea, Engineering, Pabloidea Engineering">
+	<meta name="author" content="Pabloidea">
 		<title>Pabloidea | Welcome</title>
 		<link rel="stylesheet" href="./css/style2.css">
 
@@ -88,26 +88,26 @@
       </div>
     </section>
 
+
 		<section id="boxes">
 		  <div class="container">
 		  <div class="box">
 				<img src="./favicons/favicon-96x96.png">
 		    <h3>Engineering<h3>
-		    <p>Engineering is the Coolest!!!</p>
+		    <p>Make significant contributions to this world and have fun doing it.</p>
 		  </div>
 		  <div class="box">
 		    <img src="./favicons/shirtfav.png">
 		    <h3>Fitness<h3>
-		    <p>I'm trying.</p>
+		    <p>I'm looking to get absolutely shredded -_-</p>
 		  </div>
 		  <div class="box">
 				<img src="./favicons/apple-touch-icon.png">
 		    <h3>Pablo<h3>
-		    <p>I'm not pursuing success, I seek significance. </p>
+		    <p>My identity is in Jesus and my humor is in Spanish.</p>
 		  </div>
 		</div>
 		</section>
-
 
 
     <footer>
