--- a/radio.html
+++ b/radio.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-		<meta charset="utf-8">
-		<meta name="viewport" content "width=device-width">
-		<meta name="description" content="Pablo Espíndola Chavarría">
-		<meta name="keywords" content="Pablo Espíndola,Pablo Espíndola Chavarría, Engineering, Pablo Espíndola Chavarría Engineering">
-		<meta name="author" content="Pablo Espíndola Chavarría">
+	<meta charset="utf-8">
+	<meta name="viewport" content "width=device-width">
+	<meta name="description" content="Pabloidea">
+	<meta name="keywords" content="Pabloidea, Engineering, Pabloidea Engineering">
+	<meta name="author" content="Pabloidea">
 		<title>Pabloidea | Radio</title>
 		<link rel="stylesheet" href="./css/style2.css">
 
@@ -148,45 +148,90 @@ function showSlides() {
 </section>
 
 
+
+
 <section id="main">
 	<div class="container">
-		<article id="main-col">
-			<h1 class="page-title">Engineering and Design Work</h1>
+		<article id="main-colAbt">
+			<h1 class="page-title">Amateur Radio</h1>
+			<p>
+				Amateur Radio is a bunch of engineers messing around with stuff and equipment and see what cool things one can do.
+
+<!--
+			<p class="dark">
+				Since I was a young boy, I have wanted become an engineer!
+				</p>
+				<p><br><br><br><br><br><br>></p>
+-->
+
+			</article>
+
+			<aside id="sidebar">
+				<div class="backcolor">
+
+				<center>
+				<img src="./images/Radio/RadSelf.jpg" alt="Cardboard safe dial" style="width:80%">
+				<center>
+				</div>
+			</aside>
+</div>
+</section>
+
+
+
+
+
+
+
+
+
+
+<section id="main">
+	<div class="container">
 			<ul id="services">
+			
+
+				<li>
+					<h3>Radio Gang [WØEEE]</h3>
+					<p>Antennas, RF, and computer talk only. This semester we are all taking an Antenna course together&#128515;</p>
+						<!--  <p>Pricing: $150 - $200</p> -->
+
+						<div class="row">
+							<div class="column">
+									<img src="./images/Radio/RadBench.JPG" alt="Cardboard safe dial" style="width:70%">
+							</div>
+							<div class="column">
+								<img src="./images/Radio/RadSpon.JPG" alt="Cardboard safe front" style="width:70%">
+							</div>
+							<div class="column">
+								<img src="./images/Radio/RadDairy.jpg" alt="Cardboard safe mechanism" style="width:70%">
+							</div>
+
+				</li>
+
 				<br>
 				<li>
-					<h3>Basic aircraft Design Work</h3>
-					<p>In the Spring semester of 2021 I took an Intro to Aircraft Design class, where my team and I designed and built a basic aircraft.
-					This was an awesome experience because we took the knowledge from the previous course, Aerospace Vehicle Performance, and applied a lot of the
-				equations for the desing and build of my team's aircraft.</p>
+					<h3>Meeting Bob Heil at WinterFest 2022</h3>
+					<p>We met inventor, sound and radio engineer, Bob Heil, at WinterFest 2022. It was awesome talking to him, and he ended up donating a bunch of new equipment to the club. He is very nice and we share the same birthday. We also tried to sell an old radio from the Vietnam war but it ended coming back home with me...$1k if anyone wants it.</p>
 					<!--  <p>Pricing: $150 - $200</p> -->
 
 					<center>
-						<img src="./images/Radio/RadSelf.jpg" alt="Selfie with Radio" style="width:600px;height:700px;">
+						<img src="./images/Radio/RadHeil.jpg" alt="Selfie with Radio" style="width:1000px;height:700px;">
 					</center>
 
+					<center>
+							<img src="./images/Radio/RadSprkViet.JPG" alt="Cardboard safe mechanism" style="width:600px">
+					</center>
 				</li>
-				<br>
-				<li>
-					<h3>Amateur Radio Club [W0EEE]</h3>
-					<p>I am a member of the amateur radio club. My call sign is [KF0GZR] and I hold technician and general licenses.
-					I extremely enjoy Ham Radio myself. It's awesome to know that everything in this universe is WAVES!!</p>
-						<!--  <p>Pricing: $150 - $200</p> -->
 
-						<center>
-							<img src="./images/Radio/RadSelf.jpg" alt="Selfie with Radio" style="width:400px;height:500px;">
-						</center>
-
-				</li>
 				<br>
+
 				<li>
 					<h3>Meeting Ward Silver</h3>
 					<p>In the Spring semester of 2021 I took an Intro to Aircraft Design class, where my team and I designed and built a basic aircraft.
 					This was an awesome experience because we took the knowledge from the previous course, Aerospace Vehicle Performance, and applied a lot of the
 				equations for the desing and build of my team's aircraft.</p>
 					<!--  <p>Pricing: $150 - $200</p> -->
-
-
 
 
 					<div class="row">
@@ -211,6 +256,7 @@ function showSlides() {
 			</article>
 
 </div>
+
 </section>
 
 
