--- a/gallery.html
+++ b/gallery.html
@@ -196,7 +196,7 @@
 <div class="responsive">
 	<div class="gallery">
 		<a target="_blank" href="./images/Travel/PabloinWCoast.JPG">
-			<img src="./images/Travel/PabloinWCoast.JPG" alt="Pablo Walking on the West Coast" width="600"  height="400">
+			<img src="./images/Travel/VegPablo.JPG" alt="Pablo Walking on the West Coast" width="600"  height="400">
 		</a>
 		<div class="desc">On the West Coast</div>
 	</div>
