--- a/gallery.html
+++ b/gallery.html
@@ -179,6 +179,7 @@
   <div class="gallery">
     <a target="_blank" href="./images/Travel/VegasVibe.png">
       <img src="./images/Travel/VegasVibe.png" alt="Pablo and Cameron in Las Vegas" width="600" height="400">
+			
     </a>
     <div class="desc">Landed in Las Vegas</div>
   </div>
@@ -187,7 +188,9 @@
 <div class="responsive">
 	<div class="gallery">
 		<a target="_blank" href="./images/Travel/PabloinWCoast.JPG">
+
 			<img src="./images/Travel/PabloinWCoast.JPG" alt="Pablo Walking on the West Coast" width="600"  height="400">
+
 		</a>
 		<div class="desc">On the West Coast</div>
 	</div>
@@ -196,7 +199,7 @@
 <div class="responsive">
 	<div class="gallery">
 		<a target="_blank" href="./images/Travel/PabloinWCoast.JPG">
-			<img src="./images/Travel/VegPablo.JPG" alt="Pablo Walking on the West Coast" width="600"  height="400">
+		<img src="./images/Travel/VegPablo.jpg" alt="Pablo Walking on the West Coast" width="600"  height="400">
 		</a>
 		<div class="desc">On the West Coast</div>
 	</div>
