--- a/gallery.html
+++ b/gallery.html
@@ -119,7 +119,7 @@
   	<div class="responsive">
   	  <div class="gallery">
   	    <a target="_blank" href="./images/Travel/Penguins.JPG">
-  	      <img src="./images/Travel/Penguins.JPG" alt="Pablo and Cameron in Las Vegas" width="600" height="400">
+  	      <img src="./images/Travel/Penguins.JPG" alt="Seaworld Penguins" width="600" height="400">
   	    </a>
   	    <div class="desc">SeaWorld Penguins</div>
   	  </div>
@@ -151,7 +151,7 @@
 			<a target="_blank" href="./images/Travel/PabloJohnSkate.JPG">
 				<img src="./images/Travel/PabloJohnSkate.JPG" alt="John and Pablo at the outlets" width="600" height="400">
 			</a>
-			<div class="desc">John and I at the CA outlets </div>
+			<div class="desc">Shopping for dresses</div>
 		</div>
 	</div>
 <!--
@@ -168,9 +168,9 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="./images/Travel/pabloselfieVegas.JPG">
-      <img src="./images/Travel/pabloselfieVegas.JPG" alt="Pablo and Cameron in Las Vegas" width="600" height="400">
+      <img src="./images/Travel/pabloselfieVegas.JPG" alt="Picture of Pablo" width="600" height="400">
     </a>
-    <div class="desc">Landed in Las Vegas</div>
+    <div class="desc">Felt good I guess</div>
   </div>
 </div>
 
@@ -179,7 +179,7 @@
   <div class="gallery">
     <a target="_blank" href="./images/Travel/VegasVibe.png">
       <img src="./images/Travel/VegasVibe.png" alt="Pablo and Cameron in Las Vegas" width="600" height="400">
-			
+
     </a>
     <div class="desc">Landed in Las Vegas</div>
   </div>
@@ -199,9 +199,9 @@
 <div class="responsive">
 	<div class="gallery">
 		<a target="_blank" href="./images/Travel/PabloinWCoast.JPG">
-		<img src="./images/Travel/VegPablo.jpg" alt="Pablo Walking on the West Coast" width="600"  height="400">
+		<img src="./images/Travel/VegPablo.jpg" alt="Pablo in Las Vegas" width="600"  height="400">
 		</a>
-		<div class="desc">On the West Coast</div>
+		<div class="desc">In Las Vegas</div>
 	</div>
 </div>
 
