--- a/about.html
+++ b/about.html
@@ -141,9 +141,9 @@
       <div class="container">
         <article id="main-colAbt">
           <h1 class="page-title">About Me</h1>
-          <p>
+          <p style="text-INDENT: 40px">
             Hello my name is Pablo and I like to eat peanut butter and honey sandwiches. I am currently studying Electrical, Computer and Aerospace Engineering at Missouri University of Science and Technology.
-						I grew up in Mexico City and now my family lives in St. Louis, Missouri.
+						I grew up in México City and now my family lives in St. Louis, Missouri.
 
 
           <p class="dark">
@@ -167,7 +167,73 @@
     </section>
 
 
+
 <article id = "main-colAbt2">
+
+
+	<table cellspacing="10">
+    <tr>
+      <td>
+				<p  style="text-INDENT: 40px">
+				          How many times were you frustrated while looking
+				          out for a good collection of programming/
+				          algorithm/ interview questions? What did you
+				          expect and what did you get? This portal has been
+				          created to provide well written, well thought and
+				          well explained solutions for selected questions.
+				          An IIT Roorkee alumnus and founder of
+				          GeeksforGeeks. He loves to solve programming
+				          problems in most efficient ways. Apart from
+				          GeeksforGeeks, he has worked with DE Shaw and
+				          Co. as a software developer and JIIT Noida as
+				          an assistant professor. It is a good platform
+				          to learn programming. It is an educational
+				          website. Prepare for the Recruitment drive of
+				          product based companies like Microsoft, Amazon,
+				          Adobe etc with a free online placement
+				          preparation course.
+				        </p>
+      </td>
+      <td>
+
+				<img src= "./images/Travel/BLback.jpg" style="width: 100%; height: 100%; border-radius: 50%">
+
+      </td>
+    </tr>
+  </table>
+
+
+	<table cellspacing="10">
+    <tr>
+      <td>
+				<img src= "./images/Travel/BLface.jpg" style="width: 100%; height: 100%; border-radius: 50%">
+
+      </td>
+      <td>
+
+
+				<p  style="text-INDENT: 40px">
+									How many times were you frustrated while looking
+									out for a good collection of programming/
+									algorithm/ interview questions? What did you
+									expect and what did you get? This portal has been
+									created to provide well written, well thought and
+									well explained solutions for selected questions.
+									An IIT Roorkee alumnus and founder of
+									GeeksforGeeks. He loves to solve programming
+									problems in most efficient ways. Apart from
+									GeeksforGeeks, he has worked with DE Shaw and
+									Co. as a software developer and JIIT Noida as
+									an assistant professor. It is a good platform
+									to learn programming. It is an educational
+									website. Prepare for the Recruitment drive of
+									product based companies like Microsoft, Amazon,
+									Adobe etc with a free online placement
+									preparation course.
+								</p>
+      </td>
+    </tr>
+  </table>
 
 		<p style="text-INDENT: 40px">
 			Generally, an electric field is produced by a charged particle. A force is exerted by this electric field on other charged particles. Positive charges accelerate in the direction of the field and negative charges accelerate in a direction opposite to the direction of the field.
