--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
 		  <div class="box">
 				<img src="./favicons/favicon-96x96.png">
 		    <h3>Engineering<h3>
-		    <p>Make significant contributions to this world and have fun doing it.</p>
+		    <p>Make <u>significant</u> contributions to this world and have fun doing it.</p>
 		  </div>
 		  <div class="box">
 		    <img src="./favicons/shirtfav.png">
 		    <h3>Fitness<h3>
-		    <p>I'm looking to get absolutely shredded.</p>
+		    <p>I'm working to get absolutely shredded.</p>
 		  </div>
 		  <div class="box">
 				<img src="./favicons/apple-touch-icon.png">
