--- a/radio.html
+++ b/radio.html
@@ -170,7 +170,7 @@ function showSlides() {
 				<div class="backcolor">
 
 				<center>
-				<img src="./images/Radio/RadSelf.jpg" alt="Cardboard safe dial" style="width:80%">
+				<img src="./images/Radio/RadSelf.jpg" alt="Pablo and Radio" style="width:80%">
 				<center>
 				</div>
 			</aside>
@@ -189,10 +189,10 @@ function showSlides() {
 <section id="main">
 	<div class="container">
 			<ul id="services">
-			
+
 
 				<li>
-					<h3>Radio Gang [WØEEE]</h3>
+					<h3>Radio gang [WØEEE]</h3>
 					<p>Antennas, RF, and computer talk only. This semester we are all taking an Antenna course together&#128515;</p>
 						<!--  <p>Pricing: $150 - $200</p> -->
 
