--- a/about.html
+++ b/about.html
@@ -195,9 +195,9 @@
 				        </p>
       </td>
       <td>
-
-				<img src= "./images/Travel/BLback.jpg" style="width: 100%; height: 100%; border-radius: 50%">
-
+<div class = "responsive2">
+				<img src= "./images/Travel/BLback.jpg" style=" width: 100%; height: 100%; border-radius: 50%">
+</div>
       </td>
     </tr>
   </table>
