--- a/about.html
+++ b/about.html
@@ -196,7 +196,7 @@
       </td>
       <td>
 <div class = "responsive2">
-				<img src= "./images/Travel/BLback.jpg" style=" width: 100%; height: 100%; border-radius: 50%">
+				<img src= "./images/Travel/BLback.jpg" style=" width: 500px; height: 50%; border-radius: 50%">
 </div>
       </td>
     </tr>
@@ -206,7 +206,7 @@
 	<table cellspacing="10">
     <tr>
       <td>
-				<img src= "./images/Travel/BLface.jpg" style="width: 100%; height: 100%; border-radius: 50%">
+				<img src= "./images/Travel/BLface.jpg" style="width: 500px; height: 50%; border-radius: 50%">
 
       </td>
       <td>
