--- a/about.html
+++ b/about.html
@@ -196,7 +196,7 @@
       </td>
       <td>
 <div class = "responsive2">
-				<img src= "./images/Travel/BLback.jpg" style=" width: 500px; height: 50%; border-radius: 50%">
+				<img src= "./images/Travel/BLback.jpg" style="width: 400px; height: 50%; border-radius: 50%">
 </div>
       </td>
     </tr>
@@ -206,8 +206,9 @@
 	<table cellspacing="10">
     <tr>
       <td>
-				<img src= "./images/Travel/BLface.jpg" style="width: 500px; height: 50%; border-radius: 50%">
-
+				<div class = "responsive2">
+				<img src= "./images/Travel/BLface.jpg" style="width: 350px; height: 50%; border-radius: 50%">
+			</div>
       </td>
       <td>
 
