--- a/about.html
+++ b/about.html
@@ -213,7 +213,7 @@
       <td>
 
 
-				<p  style="font size: 25px text-INDENT: 40px">
+				<p  style="text-INDENT: 40px">
 									How many times were you frustrated while looking
 									out for a good collection of programming/
 									algorithm/ interview questions? What did you
