--- a/about.html
+++ b/about.html
@@ -175,7 +175,7 @@
     <tr>
       <td>
 				<p  style="text-INDENT: 40px">
-				          How many times were you frustrated while looking
+				           were you frustrated while looking
 				          out for a good collection of programming/
 				          algorithm/ interview questions? What did you
 				          expect and what did you get? This portal has been
@@ -214,7 +214,7 @@
 
 
 				<p  style="text-INDENT: 40px">
-									How many times were you frustrated while looking
+									 were you frustrated while looking
 									out for a good collection of programming/
 									algorithm/ interview questions? What did you
 									expect and what did you get? This portal has been
