--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Pabloidea">
 	<meta name="keywords" content="Pabloidea, Engineering, Pabloidea Engineering">
 	<meta name="author" content="Pabloidea">
-		<title>Pablo Engineering | About</title>
+		<title>Pabloidea | About</title>
 		<link rel="stylesheet" href="./css/style2.css"> <!-- NOT USING STYLE2 so that the dots don't appear on slideshow -->
 
 		<link rel="apple-touch-icon" sizes="180x180" href="./favicons/apple-touch-icon.png">
