--- a/engineering.html
+++ b/engineering.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Pabloidea">
 	<meta name="keywords" content="Pabloidea, Engineering, Pabloidea Engineering">
 	<meta name="author" content="Pabloidea">
-		<title>Pablo Engineering | Engineering</title>
+		<title>Pabloidea | Engineering</title>
 		<link rel="stylesheet" href="./css/style2.css">
 
 		<link rel="apple-touch-icon" sizes="180x180" href="./favicons/apple-touch-icon.png">
