--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 		  <div class="box">
 		    <img src="./favicons/shirtfav.png">
 		    <h3>Fitness<h3>
-		    <p>I'm working to get absolutely shredded.</p>
+		    <p>My intentions include getting absolutely shredded.</p>
 		  </div>
 		  <div class="box">
 				<img src="./favicons/apple-touch-icon.png">
