--- a/engineering.html
+++ b/engineering.html
@@ -91,9 +91,15 @@
     		  <!--<div class="text">Caption Two</div> -->
     		</div>
 
+				<div class="mySlides fade">
+					<!--  <div class="numbertext">2 / 3</div> -->
+	    		  <img src="./images/Electrical/EmcCap1.jpg" style="width:100%">
+	    		   <!-- <div class="text">Caption Two</div> -->
+	    		</div>
+
     		<div class="mySlides fade">
     		<!--  <div class="numbertext">3 / 3</div> -->
-    		  <img src="./images/Electrical/EmcCap1.jpg" style="width:100%">
+    		  <img src="./images/Computer/Webcode2.JPG" style="width:100%">
     		 <!-- <div class="text">Caption Three</div> -->
     		</div>
 
@@ -104,6 +110,7 @@
     		  <span class="dot"></span>
     		  <span class="dot"></span>
     		  <span class="dot"></span>
+					<span class="dot"></span>
     		</div>
 
 
@@ -136,11 +143,11 @@
     <section id="main">
       <div class="container">
         <article id="main-col">
-          <h1 class="page-title">Engineering and Design Work</h1>
+          <h1 class="page-title">Engineering</h1>
           <ul id="services">
             <li>
-              <h3>Transformers</h3>
-              <p> I am interested in Transformers!</p>
+              <h3>Power Transformers</h3>
+              <p> Over the Summer I worked at my School's EmC</p>
             <!--  <p>Pricing: $150 - $200</p> -->
 
             <center>
@@ -177,8 +184,7 @@
             <br>
 						<li>
               <h3>Cardboard safe with fuctional lock</h3>
-              <p>This is a cardboard safe that my group and I made for a freshan design class.
-								 It's a safe that is entirely made out of cardboard. It works excellent!</p>
+              <p>This is a cardboard safe that myself along with two others built. It's a cardboard safe with a fully functional lock. I had a lot of fun designing and building this thing and it works excellent!</p>
               <!--  <p>Pricing: $150 - $200</p> -->
 
 							<div class="row">
