--- a/radio.html
+++ b/radio.html
@@ -198,13 +198,13 @@ function showSlides() {
 
 						<div class="row">
 							<div class="column">
-									<img src="./images/Radio/RadBench.JPG" alt="Cardboard safe dial" style="width:70%">
+									<img src="./images/Radio/RadBench.JPG" alt="Cardboard safe dial" style="width:100%">
 							</div>
 							<div class="column">
-								<img src="./images/Radio/RadSpon.JPG" alt="Cardboard safe front" style="width:70%">
+								<img src="./images/Radio/RadSpon.JPG" alt="Cardboard safe front" style="width:100%">
 							</div>
 							<div class="column">
-								<img src="./images/Radio/RadDairy.jpg" alt="Cardboard safe mechanism" style="width:70%">
+								<img src="./images/Radio/RadDairy.jpg" alt="Cardboard safe mechanism" style="width:100%">
 							</div>
 
 				</li>
@@ -240,6 +240,9 @@ function showSlides() {
 						</div>
 						<div class="column">
 							<img src="./images/Radio/RadHam4Dum.JPG" alt="Cardboard safe mechanism" style="width:70%">
+						</div>
+						<div class="column">
+							<img src="./images/Radio/RadBkGND.JPG" alt="Cardboard safe dial" style="width:70%">
 						</div>
 						<div class="column">
 							<img src="./images/Radio/RadWardTwr.JPG" alt="Cardboard safe dial" style="width:70%">
