--- a/about.html
+++ b/about.html
@@ -142,12 +142,13 @@
         <article id="main-colAbt">
           <h1 class="page-title">About Me</h1>
           <p style="text-INDENT: 40px">
-            Hello my name is Pablo and I like to eat peanut butter and honey sandwiches. I am currently studying Electrical, Computer and Aerospace Engineering at Missouri University of Science and Technology.
-						I grew up in México City and now my family lives in St. Louis, Missouri.
+            Hello my name is Pablo and I like to eat peanut butter and honey sandwiches. I am currently studying Electrical, Computer and Aerospace Engineering.
+						I grew up in México City and now my family lives in St. Louis, Missouri. Even though I've lived most of my life in the U.S, my mindset is still very Mexican and I love México with a passion.
+
 
 
           <p class="dark">
-            Since I was a young boy, I have wanted become an engineer!
+            Since I was a young boy, I have always wanted to become an engineer!
             </p>
 						<!--<p><br><br><br><br><br><br>></p>-->
 
@@ -157,9 +158,8 @@
           <aside id="sidebar">
             <div class="dark">
             <h3>What I do</h3>
-            <p>I am a full time student but I also work two jobs. I work in a different city as a contractor
+            <p>I am a full time student and I work two jobs. I am also part of my school's microsatellite team and amateur radio club.
 						</p>
-
 
 						</div>
           </aside>
@@ -175,23 +175,8 @@
     <tr>
       <td>
 				<p  style="text-INDENT: 40px">
-				           were you frustrated while looking
-				          out for a good collection of programming/
-				          algorithm/ interview questions? What did you
-				          expect and what did you get? This portal has been
-				          created to provide well written, well thought and
-				          well explained solutions for selected questions.
-				          An IIT Roorkee alumnus and founder of
-				          GeeksforGeeks. He loves to solve programming
-				          problems in most efficient ways. Apart from
-				          GeeksforGeeks, he has worked with DE Shaw and
-				          Co. as a software developer and JIIT Noida as
-				          an assistant professor. It is a good platform
-				          to learn programming. It is an educational
-				          website. Prepare for the Recruitment drive of
-				          product based companies like Microsoft, Amazon,
-				          Adobe etc with a free online placement
-				          preparation course.
+				           This summer I worked at my school's Electromagnetic Compatibility (EMC) Lab where I had the priveledge to work on a project for
+									 The Defense Advanced Research Projects Agency (DARPA). I also worked as a contractor at a company in Saint Louis, where I worked on some programs that evaluate power transformers.
 				        </p>
       </td>
       <td>
@@ -214,32 +199,14 @@
 
 
 				<p  style="text-INDENT: 40px">
-									 were you frustrated while looking
-									out for a good collection of programming/
-									algorithm/ interview questions? What did you
-									expect and what did you get? This portal has been
-									created to provide well written, well thought and
-									well explained solutions for selected questions.
-									An IIT Roorkee alumnus and founder of
-									GeeksforGeeks. He loves to solve programming
-									problems in most efficient ways. Apart from
-									GeeksforGeeks, he has worked with DE Shaw and
-									Co. as a software developer and JIIT Noida as
-									an assistant professor. It is a good platform
-									to learn programming. It is an educational
-									website. Prepare for the Recruitment drive of
-									product based companies like Microsoft, Amazon,
-									Adobe etc with a free online placement
-									preparation course.
+										This semester I'm helping the microsatellite team by designing, building and testing a low-noise amplifier (LNA) for one of the satellites that we hope gets launched to space in about a year.
 								</p>
       </td>
     </tr>
   </table>
 
 		<p style="text-INDENT: 40px">
-			Generally, an electric field is produced by a charged particle. A force is exerted by this electric field on other charged particles. Positive charges accelerate in the direction of the field and negative charges accelerate in a direction opposite to the direction of the field.
-			The Magnetic field is produced by a moving charged particle. A force is exerted by this magnetic field on other moving particles. The force on these charges is always perpendicular to the direction of their velocity and therefore only changes the direction of the velocity, not the speed.
-			So, the electromagnetic field is produced by an accelerating charged particle. Electromagnetic waves are nothing but electric and magnetic fields travelling through free space with the speed of light c. An accelerating charged particle is when the charged particle oscillates about an equilibrium position. If the frequency of oscillation of the charged particle is f, then it produces an electromagnetic wave with frequency f. The wavelength λ of this wave is given by λ = c/f.  Electromagnetic waves transfer energy through space.
+			I built the front end of this website for fun and I plan to write code for some backend later. I am not a web developer so a lot is poorly written but the great thing is that I'm good at copying and pasting.
 
 		</p>
 
