--- a/engineering.html
+++ b/engineering.html
@@ -147,44 +147,30 @@
           <ul id="services">
             <li>
               <h3>Power Transformers</h3>
-              <p> Over the Summer I worked at my School's EmC</p>
+              <p>Below is a picture of a test transformer from one of the places I work at.</p>
             <!--  <p>Pricing: $150 - $200</p> -->
 
             <center>
-              <img src="./images/Electrical/Transformer.JPG" alt="Selfie with Radio" style="width:500px;height:600px;">
+              <img src="./images/Electrical/Transformer.JPG" alt="test transformer" style="width:500px;height:600px;">
             </center>
 
             </li>
             <br>
-            <li>
-              <h3>Amateur Radio Club [W0EEE]</h3>
-              <p>I am a member of the amateur radio club. My call sign is [KF0GZR] and I hold technician and general licenses.
-							I extremely enjoy Ham Radio myself. It's awesome to know that everything in this universe is WAVES!!</p>
-                <!--  <p>Pricing: $150 - $200</p> -->
 
-								<center>
-									<img src="./images/Radio/RadSelf.jpg" alt="Selfie with Radio" style="width:400px;height:500px;">
-								</center>
-
-            </li>
-            <br>
             <li>
-              <h3>Basic aircraft Design Work</h3>
-              <p>In the Spring semester of 2021 I took an Intro to Aircraft Design class, where my team and I designed and built a basic aircraft.
-							This was an awesome experience because we took the knowledge from the previous course, Aerospace Vehicle Performance, and applied a lot of the
-						equations for the desing and build of my team's aircraft.</p>
+              <h3>Electromagnetic Compatability Lab</h3>
+              <p>This measurement was done with a 0.5 mm pitch probe.</p>
               <!--  <p>Pricing: $150 - $200</p> -->
 
               <center>
 									<img src="./images/Electrical/EmcZoom.JPG" alt="EMC" style="width:500px; height: 500px;">
                   </center>
 
-
             </li>
             <br>
 						<li>
-              <h3>Cardboard safe with fuctional lock</h3>
-              <p>This is a cardboard safe that myself along with two others built. It's a cardboard safe with a fully functional lock. I had a lot of fun designing and building this thing and it works excellent!</p>
+              <h3>Cardboard safe with a fuctional lock</h3>
+              <p>This is a cardboard safe that myself along with two others built a long time ago. It's a cardboard safe with a fully functional lock. I'm showing it because I had a lot of fun designing and building this thing, and it works excellent!</p>
               <!--  <p>Pricing: $150 - $200</p> -->
 
 							<div class="row">
