--- a/radio.html
+++ b/radio.html
@@ -155,7 +155,7 @@ function showSlides() {
 		<article id="main-colAbt">
 			<h1 class="page-title">Amateur Radio</h1>
 			<p>
-				Amateur Radio is a bunch of engineers messing around with stuff and equipment and see what cool things one can do.
+				You are able to watch your favorite YouTube videos because of radio. All wireless communications with radio. Amateur radio means engineers messing around with electronics, waves and equipment to see what one can do.
 
 <!--
 			<p class="dark">
@@ -193,7 +193,7 @@ function showSlides() {
 
 				<li>
 					<h3>Radio gang [WØEEE]</h3>
-					<p>Antennas, RF, and computer talk only. This semester we are all taking an Antenna course together&#128515;</p>
+					<p>Antennas, RF, and computer talk only. This semester we are all taking an Antennas course together&#128515;</p>
 						<!--  <p>Pricing: $150 - $200</p> -->
 
 						<div class="row">
@@ -212,7 +212,7 @@ function showSlides() {
 				<br>
 				<li>
 					<h3>Meeting Bob Heil at WinterFest 2022</h3>
-					<p>We met inventor, sound and radio engineer, Bob Heil, at WinterFest 2022. It was awesome talking to him, and he ended up donating a bunch of new equipment to the club. He is very nice and we share the same birthday. We also tried to sell an old radio from the Vietnam war but it ended coming back home with me...$1k if anyone wants it.</p>
+					<p>We met inventor, sound and radio engineer, Bob Heil, at WinterFest 2022. He later donated a bunch of new equipment to the club. He is very nice and we share the same birthday. We also tried to sell an old radio from the Vietnam War but it ended coming back home with me...$1k if anyone wants it.</p>
 					<!--  <p>Pricing: $150 - $200</p> -->
 
 					<center>
@@ -228,9 +228,7 @@ function showSlides() {
 
 				<li>
 					<h3>Meeting Ward Silver</h3>
-					<p>In the Spring semester of 2021 I took an Intro to Aircraft Design class, where my team and I designed and built a basic aircraft.
-					This was an awesome experience because we took the knowledge from the previous course, Aerospace Vehicle Performance, and applied a lot of the
-				equations for the desing and build of my team's aircraft.</p>
+					<p>Author and engineer, Ward Silver, invited my friends and I to his main operating station. He has 3 giant towers and a lot of other cool stuff. He taught us how to safely climb a tower and some grounding and bonding basics.</p>
 					<!--  <p>Pricing: $150 - $200</p> -->
 
 
