--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
 
 
           <p class="dark">
-            Since I was a young boy, I have always wanted to become an engineer!
+            Since I was a young boy, I have always wanted to become an engineer and inventor!
             </p>
 						<!--<p><br><br><br><br><br><br>></p>-->
 
