--- a/about.html
+++ b/about.html
@@ -176,7 +176,7 @@
       <td>
 				<p  style="text-INDENT: 40px">
 				           This summer I worked at my school's Electromagnetic Compatibility (EMC) Lab where I had the priveledge to work on a project for
-									 The Defense Advanced Research Projects Agency (DARPA). I also worked as a contractor at a company in Saint Louis, where I worked on some programs that evaluate power transformers.
+									 The Defense Advanced Research Projects Agency (DARPA). I also worked as a contractor at a company in Saint Louis, where I worked on programs that evaluate power transformers.
 				        </p>
       </td>
       <td>
@@ -199,14 +199,14 @@
 
 
 				<p  style="text-INDENT: 40px">
-										This semester I'm helping the microsatellite team by designing, building and testing a low-noise amplifier (LNA) for one of the satellites that we hope gets launched to space in about a year.
+										This semester I'm helping the microsatellite team by designing, building and testing a low-noise amplifier (LNA) for one of the satellites that we hope gets launched to space in a year.
 								</p>
       </td>
     </tr>
   </table>
 
 		<p style="text-INDENT: 40px">
-			I built the front end of this website for fun and I plan to write code for some backend later. I am not a web developer so a lot is poorly written but the great thing is that I'm good at copying and pasting.
+			I built the front end of this website for fun and I plan to write some backend code later. The "subscribe" button does nothing. I am not a web developer so a lot is poorly written, but the great thing is that I'm good at copying and pasting.
 
 		</p>
 
