--- a/engineering.html
+++ b/engineering.html
@@ -99,7 +99,7 @@
 
     		<div class="mySlides fade">
     		<!--  <div class="numbertext">3 / 3</div> -->
-    		  <img src="./images/Computer/Webcode7.JPG" style="width:100%">
+    		  <img src="./images/Computer/Webcode8.JPG" style="width:100%">
     		 <!-- <div class="text">Caption Three</div> -->
     		</div>
 
@@ -170,7 +170,7 @@
             <br>
 						<li>
               <h3>Cardboard safe with a fuctional lock</h3>
-              <p>This is a cardboard safe that myself along with two others built a long time ago. It's a cardboard safe with a fully functional lock. I'm showing it because I had a lot of fun designing and building this thing, and it works excellent!</p>
+              <p>This is a cardboard safe that myself along and two others built a long time ago. It's a cardboard safe with a fully functional lock. I'm showing it because I had a lot of fun designing and building this thing, and it works excellent.</p>
               <!--  <p>Pricing: $150 - $200</p> -->
 
 							<div class="row">
