--- a/about.html
+++ b/about.html
@@ -205,16 +205,17 @@
     </tr>
   </table>
 
-		<p style="text-INDENT: 40px">
-			I built the front end of this website for fun and I plan to write some backend code later. The "subscribe" button does nothing.
-			I am not a web developer so a lot is poorly written, but the great thing is that I'm good at copying and pasting. At least it's not as bad as my grammar.
-
-		</p>
-
-
 
 </article>
 
+
+
+<p style="text-INDENT: 40px; padding-left: 60px; padding-right: 60px;">
+	I built the front end of this website for fun and I plan to write some backend code later. The "subscribe" button does nothing.
+	I am not a web developer so a lot is poorly written, but the great thing is that I'm good at copying and pasting. At least it's not as bad as my grammar.
+
+</p>
+<br><br><br>
 
     <footer>
       <p>Pabloidea, Copyright &copy; 2022 <br>
